# p-adic-diagrams

./: LICENSE  README.md  p-adic-diagrams.cabal
src/: Main.hs
