
name:                p-adic-diagrams
version:             0.1.0.0
synopsis:            Generate simple p-adic integer diagrams
license:             BSD3
license-file:        LICENSE
author:              Nikola Ubavić
maintainer:          example@example.com
copyright:           2021 Nikola Ubavić
category:            Math
build-type:          Simple
extra-source-files:  README.md, img
cabal-version:       >=1.10

executable p-adic-diagrams
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       colour,
                       diagrams-lib >= 1.4,
                       diagrams-rasterific >=1.4,
                       diagrams-svg >=1.4

  hs-source-dirs:      src
  default-language:    Haskell2010
